--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
-.App{
-    text-align:center;
+.app{
+    background-color: #f3f2ef;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.app_body{
+    display:flex;
+    margin-top: 35px;
+    max-width: 1200px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
